<resources>
    <string name="app_name">ContextAnalyzer</string>
    <string name="cache_hits"><b>Cache Hits:</b></string>
    <string name="overallMetrics"><b>OVERALL METRICS</b></string>
    <string name="cacheMisses"><b>Cache Misses:</b></string>
    <string name="cacheHitRatio"><b>Cache Hit Ratio:</b></string>
    <string name="suggestedApplicationsMetrics"><b>SUGGESTED APPLICATIONS METRICS</b></string>
    <string name="suggestedHitsNotInCache"><b>Cache Hits </b>
        (From Apps <b>Not In</b> Cache but In Suggested List):</string>
    <string name="suggestedHitsAlsoInCache"><b>Cache Hits</b>
        (From Apps in Cache <b>AND</b> Suggested List):</string>
    <string name="recentHitsOrMisses"><b>RECENT HITS/MISSES:</b></string>
    <string name="listOfProcessesInCache"><b>LIST OF PROCESSES IN CACHE</b></string>
    <string name="listOfSuggestedApplications"><b>LIST OF SUGGESTED APPLICATIONS:</b></string>
    <string name="myApp">com.thesis.android.metrics.contextanalyzer</string>
    <string name="homeScreen">com.google.android.googlequicksearchbox</string>
    <string name="acoreProcess">android.process.acore</string>
    <string name="boxSearchApp">com.google.android.googlequicksearchboxsearch</string>
    <string name="topLevelFilePath">/proc</string>
    <string name="cgroupFilePath">/proc/%d/cgroup</string>
    <string name="bg_non_interactive">bg_non_interactive</string>
    <string name="cmdlineFilePath">/proc/%d/cmdline</string>
    <string name="systemUIProcessName">com.android.systemui</string>
    <string name="COLON">:</string>
    <string name="FORWARD_SLASH">/</string>
    <string name="uid_">uid_</string>
    <string name="EMPTY" />
    <string name="oomScoreAdjFilePath">/proc/%d/oom_score_adj</string>
    <string name="oomScoreFilePath">/proc/%d/oom_score</string>
    <string name="metricsDataFileName">metricsData</string>
    <string name="systemAndDeviceInformation"><b>SYSTEM AND DEVICE INFORMATION:</b></string>
    <string name="numberOfInstalledApplications"><b>NUMBER OF INSTALLED APPLICATIONS:</b></string>
    <string name="cacheMetricsApp">com.thesis.android.metrics.cachemetricscollector</string>
    <string name="googleDialer">com.google.android.dialer</string>
    <string name="hangouts">com.google.android.talk</string>
    <string name="skype">com.skype.raider</string>
    <string name="imo">com.imo.android.imoim</string>
    <string name="contacts">com.google.android.contacts</string>
    <string name="whatsapp">com.whatsapp</string>
    <string name="email">com.google.android.email</string>
    <string name="gmail">com.google.android.gm</string>
    <string name="calendar">com.android.providers.calendar</string>
    <string name="googleDocs">com.google.android.apps.docs.editors.docs</string>
    <string name="googleSheets">com.google.android.apps.docs.editors.sheets</string>
    <string name="googleSlides">com.google.android.apps.docs.editors.slides</string>
    <string name="googleDrive">com.google.android.apps.docs</string>
    <string name="googleKeep">com.google.android.keep</string>
    <string name="chromProcess1">com.android.chromeprivelegedprocess</string>
    <string name="chromeProcess2">com.android.chrome</string>
    <string name="chromeProcess3">com.android.chromesandboxedprocess</string>
    <string name="clock">com.google.android.deskclock</string>
    <string name="goSMS">com.jb.gosms</string>
    <string name="calculator">com.android.calculator</string>
    <string name="numberOfUniqueApplicationsClicked"><b>NUMBER OF UNIQUE APPLICATIONS CLICKED:</b></string>
    <string name="uniqueApplicationsClicked"><b>UNIQUE APPLICATIONS CLICKED:</b></string>
</resources>
